# unflincher

./: .containerignore  .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
deploy/: create-access-diary-app.sh  create-access-unflincher-app.sh
deploy/cloudflared/: diary-ingress.snippet.yml  unflincher-ingress.snippet.yml
deploy/quadlet/: diary-data.volume  diary.container  unflincher-data.volume  unflincher.container
deploy/scripts/: build-unflincher-release.sh  deploy-diary.sh  deploy-unflincher.sh  diary-backup.sh  import-diary.sh  import-unflincher.sh  unflincher-backup.sh  unflincher-restore-drill.sh  (+1 more)
docs/: backup-and-recovery.md  backup-and-restore.md  configuration.md  deployment.md  import.md  local-development.md  release-notes-v0.1.0.md  release-notes-v0.2.0.md  upgrade-v0.2.md
site/: index.html  llms.txt  robots.txt  sitemap.xml
src/diary/: app.py  (+11 more)
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_community_and_metadata.py  test_context_budget.py  test_csrf.py  test_db.py  test_deploy_backup.py  test_generation_safety_db.py  test_i18n.py  test_i18n_all_languages_smoke.py  test_i18n_onboarding.py  test_i18n_templates_page1.py  test_i18n_templates_page2.py  test_i18n_templates_page3.py  test_importer.py  test_lifespan.py  test_llm.py  test_llm_stream_completion.py  test_onboarding.py  test_persistence_workstream.py  test_perspectives.py  test_positioning_contract.py  test_probe.py  test_public_assets.py  test_public_docs.py  test_public_fixture.py  test_public_provenance.py  test_public_readiness_audit.py  test_readme_and_docs.py  test_reflection_output.py  test_regen_enqueue.py  test_release_deploy.py  test_request_envelope.py  test_routes_chat.py  test_routes_entry.py  test_routes_errors.py  test_routes_new_entry.py  test_routes_report.py  (+19 more)
tools/: public_image_sources.json  public_provenance.py  public_readiness_audit.py  validate_public_fixture.py
(+108 files in other folders)
