[project]
name = "diary"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "litellm>=1.52",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "nh3>=0.2.18",
    "markdown-it-py>=3.0",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
