[project]
name = "unflincher"
version = "0.1.0"
requires-python = ">=3.12"
license = {text = "PolyForm-Noncommercial-1.0.0"}
description = "Evidence-grounded AI reflection partner for finding patterns across years of journal entries."
readme = "README.md"
keywords = ["journaling", "diary", "self-hosted", "self-reflection", "reflection", "journal-analysis", "ai-reflection-partner", "llm", "github-copilot", "fastapi", "sqlite", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "github-copilot-sdk>=1.0.5",
    "httpx>=0.27",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "nh3>=0.2.18",
    "markdown-it-py>=3.0",
    "pyjwt[crypto]>=2.9",
]

[project.urls]
Homepage = "https://sinmentis.github.io/unflincher/"
Repository = "https://github.com/sinmentis/unflincher"
Documentation = "https://github.com/sinmentis/unflincher/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
